--- a/css/styles-adaptive.css
+++ b/css/styles-adaptive.css
@@ -251,9 +251,12 @@ img {
     border-radius: 0px 0px 4px 4px;
     background-color: var(--pr-white-color);
 }
-.icon-list {
+.list-links {
     margin-top: 8px;
     padding-bottom: 32px;
+
+}
+.icon-list {
     display: flex;
     justify-content: center;
     background-color: var(--pr-white-color);
@@ -301,9 +304,6 @@ img {
 
 }
 .customers-icon {
-    display: flex;
-    width: 100%;
-    height: 56px;
     fill:#8E8F99;
 
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -314,7 +314,6 @@ img {
     align-items: center;
     justify-content: center;
     height: 88px;
-    box-sizing: border-box;
     border: 1px solid #8E8F99;
     border-radius: 4px;
 
@@ -356,7 +355,7 @@ img {
     font-weight: 400;
     font-size: 16px;
     line-height: 1.5em;
-    text-align: left;
+    text-align: start;
 }
 .footer-title {
     font-weight: 500;
@@ -468,9 +467,6 @@ img {
     /*Modal*/
 /*Backdrop */
 
-@media screen and (max-width: 767px) {
-
-}
 .backdrop {
     position: fixed;
     overflow-y: scroll;
@@ -684,7 +680,10 @@ img {
 textarea {
     resize: none;
 }
-
+.form-button {
+   display: flex;
+   justify-content: center;
+}
 
 .modal-submit {
     color: var(--pr-white-color);
@@ -722,12 +721,17 @@ textarea {
         align-items: center;
         justify-content: space-between;
     }
+    .logo-studio {
+        padding-top: 24px;
+        padding-bottom: 24px;
+    }
     .head {
-        min-height: 70px;
         display: flex;
         justify-content: space-between;
     }
-        
+    .modal {
+        width: 90%;
+    }
     .main-nav {
         width: 100%;
         display: flex;
@@ -801,7 +805,6 @@ textarea {
     }
     
     .mobile-menu .current {
-        padding-top: 80px;
         color: var(--social-icon);
     }
     
@@ -817,7 +820,7 @@ textarea {
     .contacts-tel-burger {
         font-weight: 600;
         display: block;
-        font-size: 36px;
+        font-size: 26px;
         line-height: 1.11;
         margin-bottom: 40px;
     }
@@ -886,16 +889,21 @@ textarea {
         line-height: 1.11;
     }
     
-    .section:nth-child(2n+1) {
+    .section {
         padding-bottom: 96px;
     }
     
-    .section:nth-child(2n) {
+    .section:nth-child(4n) {
         padding-bottom: 128px;
     }
     
     .feature-list .item:not(:first-child) {
         margin-top: 72px;
+    }
+    .feature-list .title {
+        font-weight: 700;
+        font-size: 36px;
+        line-height: 1.11;
     }
     
     .team-list .item:not(:first-child) {
@@ -916,23 +924,20 @@ textarea {
         justify-content: center;
         text-align: center;
     }
-    
     .footer-button {
         display: flex;
         justify-content: center;
     }
-    
     .customers-list .item {
         width: calc((100% - 2 * 8px) / 2);
         margin-bottom: 72px;
     }
-    
+    .information {
+        display: inline-block;
+        width: 268px;
+    }
     .customers-list .item:nth-last-child(-n+2) {
         margin-bottom: 0;
-    }
-    .footer-text {
-        padding-left: 80px;
-        padding-right: 80px;
     }
     .footer-mail {
         margin-bottom: 16px;
@@ -951,8 +956,11 @@ textarea {
     .container {
         max-width: 428px;
     }
+    .logo-studio {
+        padding-top: 24px;
+        padding-bottom: 24px;
+    }
     .head {
-        min-height: 70px;
         display: flex;
         justify-content: space-between;
     }
@@ -961,6 +969,9 @@ textarea {
         display: flex;
         justify-content: space-between;
      
+    }
+    .modal {
+        width: 392px;
     }
     .shadow-header {
         position: relative;
@@ -1023,7 +1034,6 @@ textarea {
         list-style: none;
     }
     .mobile-menu .current {
-        padding-top: 80px;
         color: var(--social-icon);
     }
     .menu-link {
@@ -1099,11 +1109,11 @@ textarea {
         line-height: 1.11;
     }
     
-    .section:nth-child(2n+1) {
+    .section {
         padding-bottom: 96px;
     }
     
-    .section:nth-child(2n) {
+    .section:nth-child(4n) {
         padding-bottom: 128px;
     }
     .feature-list .item:not(:first-child) {
@@ -1134,10 +1144,10 @@ textarea {
     
     .customers-list .item:nth-last-child(-n+2) {
         margin-bottom: 0;
-        }
-    .footer-text {
-        padding-left: 80px;
-        padding-right: 80px;
+    }
+    .information {
+        display: inline-block;
+        width: 268px;
     }
     .footer-list {
         display: flex;
@@ -1157,6 +1167,11 @@ textarea {
 .work,
 .features-icon {
     display: none;
+}
+.feature-list .title{
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
 }
 }
 
