--- a/css/styles-adaptive.css
+++ b/css/styles-adaptive.css
@@ -877,7 +877,10 @@ textarea {
         (min-resolution: 192dpi),
         (min-resolution: 2dppx) {
             .hero {
-                background-image: url("../image/hero-mob-2x.jpg");
+                background-image: linear-gradient(to right,
+                        rgba(46, 47, 66, 0.7),
+                        rgba(46, 47, 66, 0.7)),
+                         url("../image/hero-mob-2x.jpg");
             }
 
         }
@@ -1099,7 +1102,10 @@ textarea {
         (min-resolution: 192dpi),
         (min-resolution: 2dppx) {
             .hero {
-                background-image: url("../image/hero-mob-2x.jpg");
+                background-image: linear-gradient(to right,
+                        rgba(46, 47, 66, 0.7),
+                        rgba(46, 47, 66, 0.7)),
+                         url("../image/hero-mob-2x.jpg");
             }
         }
     .hero-title {
