--- a/css/styles-adaptive.css
+++ b/css/styles-adaptive.css
@@ -871,6 +871,7 @@ textarea {
                         rgba(46, 47, 66, 0.7),
                         rgba(46, 47, 66, 0.7)),
                     url("../image/hero-mob.jpg");
+        background-image: -webkit-gradient(linear, left top, right top, from(rgba(46, 47, 66, 0.7019607843)), to(rgba(46, 47, 66, 0.7019607843))), url(../image/hero-mob.jpg);
         }
             
         @media (min-device-pixel-ratio: 2),
@@ -1097,6 +1098,7 @@ textarea {
                     rgba(46, 47, 66, 0.7),
                     rgba(46, 47, 66, 0.7)),
                 url("../image/hero-mob.jpg");
+        background-image: -webkit-gradient(linear, left top, right top, from(rgba(46, 47, 66, 0.7019607843)), to(rgba(46, 47, 66, 0.7019607843))), url(../image/hero-mob.jpg);        
     }
         @media (min-device-pixel-ratio: 2),
         (min-resolution: 192dpi),
