--- a/css/tablet.css
+++ b/css/tablet.css
@@ -54,7 +54,10 @@
             (min-resolution: 192dpi),
             (min-resolution: 2dppx) {
                 .hero {
-                    background-image: url("../image/hero-tablet-2x.jpg");
+                    background-image: linear-gradient(to right,
+                            rgba(46, 47, 66, 0.7),
+                            rgba(46, 47, 66, 0.7)),
+                            url("../image/hero-tablet-2x.jpg");
                 }
     }
     .section:nth-child(2n+1) {
