--- a/css/styles-adaptive.css
+++ b/css/styles-adaptive.css
@@ -715,7 +715,7 @@ textarea {
 }
 
     /* Adaptive*/
-@media screen and (max-width: 479.97px) {
+@media screen and (max-width: 427.97px) {
     .container {
         width: 100%;
         align-items: center;
@@ -820,7 +820,7 @@ textarea {
     .contacts-tel-burger {
         font-weight: 600;
         display: block;
-        font-size: 26px;
+        font-size: 36px;
         line-height: 1.11;
         margin-bottom: 40px;
     }
@@ -958,7 +958,7 @@ textarea {
     }
 }
 
-@media screen and (min-width: 480px) and (max-width: 767px) {
+@media screen and (min-width: 428px) and (max-width: 767px) {
     .container {
         max-width: 428px;
     }
@@ -1176,7 +1176,7 @@ textarea {
         width: 392px;
     }
 }
-@media screen and (min-width: 480px) and (max-width: 1199px){
+@media screen and (min-width: 428px) and (max-width: 1199px){
 .work,
 .features-icon {
     display: none;
@@ -1188,3 +1188,145 @@ textarea {
 }
 }
 
+.filter-btn {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    margin-bottom: 72px;
+    justify-content: center;
+}
+
+.filter-btn .title:not(:last-child) {
+    padding-right: 24px;
+}
+
+.btn:hover,
+.btn:focus {
+    color: var(--pr-white-color);
+    background-color: var(--hover);
+    border-color: var(--hover);
+    cursor: pointer;
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+
+.btn {
+    display: inline-block;
+    padding: 12px 24px;
+    color: var(--hover);
+    background-color: var(--cloud-color);
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 1.19;
+    letter-spacing: 0.04em;
+    cursor: pointer;
+    border: 1px solid var(--accent);
+    border-radius: 4px;
+
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.project-section {
+    padding-top: 98px;
+    padding-bottom: 120px;
+}
+
+.project-list {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.project-list .item {
+    margin-right: 24px;
+    margin-bottom: 48px;
+
+}
+
+.project-link {
+    display: block;
+
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.project-link:hover,
+.project-link:focus {
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+        0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+.project-link:hover .project-overlay {
+    transform: translateY(0);
+}
+
+.project-list .item:nth-last-child(-n+3) {
+    margin-bottom: 0;
+}
+
+.project-list .item:nth-child(3n) {
+    margin-right: 0;
+}
+
+.project-list .title {
+    margin-bottom: 8px;
+    color: var(--title-text-color);
+    font-family: inherit;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 1.2;
+
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.project-list .title:hover,
+.project-list .title:focus {
+    color: var(--hover);
+}
+
+.content {
+    padding-left: 16px;
+    padding-bottom: 32px;
+    padding-top: 32px;
+    box-shadow: 0px 1px 6px rgb(46 47 66 / 8%);
+    border-bottom: 0.5px solid var(--accent);
+    border-right: 0.5px solid var(--accent);
+    border-left: 0.5px solid var(--accent);
+
+}
+
+.project-link .text {
+    color: var(--primary-text-color);
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+}
+
+.project-image {
+    position: relative;
+    overflow: hidden;
+}
+
+.project-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--hover);
+    transform: translateY(100%);
+
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.text-overlay {
+    color: var(--cloud-color);
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    padding-top: 40px;
+    padding-left: 32px;
+    padding-right: 32px;
+}
