--- a/css/styles-adaptive.css
+++ b/css/styles-adaptive.css
@@ -1188,18 +1188,16 @@ textarea {
 }
 }
 
+/* PORTFOLIO */
 .filter-btn {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    margin-bottom: 72px;
     justify-content: center;
 }
-
 .filter-btn .title:not(:last-child) {
     padding-right: 24px;
 }
-
 .btn:hover,
 .btn:focus {
     color: var(--pr-white-color);
@@ -1227,23 +1225,11 @@ textarea {
         border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
         box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.project-section {
-    padding-top: 98px;
-    padding-bottom: 120px;
-}
-
 .project-list {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
 }
-
-.project-list .item {
-    margin-right: 24px;
-    margin-bottom: 48px;
-
-}
-
 .project-link {
     display: block;
 
@@ -1259,14 +1245,6 @@ textarea {
 
 .project-link:hover .project-overlay {
     transform: translateY(0);
-}
-
-.project-list .item:nth-last-child(-n+3) {
-    margin-bottom: 0;
-}
-
-.project-list .item:nth-child(3n) {
-    margin-right: 0;
 }
 
 .project-list .title {
@@ -1330,3 +1308,27 @@ textarea {
     padding-left: 32px;
     padding-right: 32px;
 }
+ @media screen and (max-width: 767px) {
+.filter-btn {
+    margin-bottom: 48px;
+}
+
+.filter-btn .title:nth-child(-n+3){ 
+    margin-bottom: 16px;
+}
+
+.project-section {
+    padding-top: 48px;
+    padding-bottom: 48px;
+}
+
+.project-list {
+    justify-content: center;
+}
+
+.project-list .item:not(:last-child) {
+    margin-bottom: 48px;
+
+}
+
+ }
